io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/redpayablewithoutfromcontract2/RedPayableWithoutFromContract.java
package io.hotmoka.tests.errors.redpayablewithoutfromcontract2;

import io.takamaka.code.lang.RedPayable;

public interface RedPayableWithoutFromContract {
	public @RedPayable void m(int amount);
}